removed extra labels